--- a/javascript/packages/react/package.json
+++ b/javascript/packages/react/package.json
@@ -1,15 +1,26 @@
 {
-  "name": "adrenal-sdk",
+  "name": "@adrenal-sdk/react",
   "version": "0.1.0",
-  "private": false,
-  "description": "Official SDK for Adrenal AI chatbots",
+  "description": "React components and hooks for Adrenal AI chatbots",
+  "main": "src/index.js",
+  "files": [
+    "src"
+  ],
+  "dependencies": {
+    "react": "^19.0.0"
+  },
+  "peerDependencies": {
+    "react": "^19.0.0"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
   "keywords": [
     "adrenal",
     "chatbot",
     "react",
     "ai",
-    "chat",
-    "sdk"
+    "chat"
   ],
   "author": "Adrenal AI",
   "license": "MIT",
@@ -21,4 +32,4 @@
     "url": "https://github.com/adrenal-ai/adrenal-sdk/issues"
   },
   "homepage": "https://github.com/adrenal-ai/adrenal-sdk#readme"
-}
+} 
